fixed carousel captions from overlapping

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -12,7 +12,7 @@
   background-color: white;
   position : absolute;
   bottom : 0;
-  height : 50px;
+  height : 20px;
   padding: 10px
 }
 footer {
